@@ -121,4 +121,16 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>jdk16</id>
+            <activation>
+                <jdk>[16,)</jdk>
+            </activation>
+            <properties>
+                <surefire.argLine>--illegal-access=permit</surefire.argLine>
+            </properties>
+        </profile>
+    </profiles>
 </project>
